alignment issue fixed

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,7 +34,7 @@ body {
 
 #logo{
 	position: absolute;
-	top: -3px;
+	top: -14px;
 	left: 35px;
 }
 
